# Senior-Thesis

./: DataSection.md  Week1.md  Week2.md  Week5.md  Week6.md  WinterTermPlan.md  litreview.md  proposal.md
thesis-robustness/: .gitignore  CLEANUP_SUMMARY.md  HOW_TO_PLOT.md  PROJECT_STATUS.md  README.md  pyproject.toml  run_week1_baselines.sh
thesis-robustness/.mplconfig/: fontlist-v390.json
thesis-robustness/configs/: adult_baseline.yaml  adult_imbalance.yaml  adult_missingness.yaml  adult_noise.yaml  airbnb_baseline.yaml  airbnb_missingness.yaml  airbnb_noise.yaml  amazon_baseline.yaml  imdb_baseline.yaml  imdb_token_dropout.yaml
thesis-robustness/docs/: CROSS_DOMAIN_NOTE.md  DOCUMENTATION_INDEX.md  QUICKSTART.md  REORGANIZATION_SUMMARY.md  RESULTS_GUIDE.md  TRAIN_VAL_TEST_EXPLAINED.md  USAGE_SUMMARY.md  VERIFICATION_RESULTS.md  VISUALIZATION_GUIDE.md  WEEK1_SETUP.md  WEEK3_DELIVERABLES.md  WEEK4_CHECKLIST.md  WEEK4_PILOT_GUIDE.md
thesis-robustness/docs/week1/: RESULTS_VERIFICATION.md  (+1 more)
thesis-robustness/outputs/: WEEK4_RESULTS.md  WEEK6_7_PLAN.md
thesis-robustness/scripts/: build_master_thesis_pack.py  generate_all_plots.py  load_multi_seed_results.py  plot_master_comparison.py  plot_results.py  plot_results_simple.py  plot_stability.py  plot_week7_summary.py  plot_week8_summary.py  rerun_week6_failed.sh  run_domain_shift.py  run_week1_baselines.sh  run_week6_week7.sh  run_week6_week7_rerun.sh  visualize_baselines.py
thesis-robustness/src/: __init__.py
thesis-robustness/tests/: test_corruption_pipeline.py  test_corruptions.py  test_setup.py
(+1627 files in other folders)
